# hasktorch-serving-models-skeleton

./: Dockerfile  README.md  cabal.project  default.nix  heroku.yml  serving.cabal  shell.nix
exe/: Main.hs
nix/: haskell.nix  stack-shell.nix
src/: Lib.hs  Test.hs  TestUtil.hs
