cabal-version:       2.2
name:                serving
version:             0.0.0.0
synopsis:            See README for more info
description:         See README for more info
license:             MIT
license-file:        LICENSE
author:              The Hasktorch Team
maintainer:          hasktorch@gmail.com
copyright:           2020 The Hasktorch Team
category:            Tensors, Machine Learning, AI
build-type:          Simple
extra-doc-files:     README.md
                   , CHANGELOG.md
tested-with:         GHC == 8.8.3

common base
  ghc-options: -Wall -Wextra -Wno-unrecognised-pragmas -Wno-orphans
  default-language: Haskell2010
  build-depends:
      base >= 4.12 && < 5
    , hasktorch >= 0.2 && < 0.3
    , servant-server
    , servant-multipart
    , servant-JuicyPixels
    , JuicyPixels
    , aeson
    , warp
    , bytestring
    , text

common binary-base
  import: base
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends: serving

library
  import: base
  exposed-modules:
    HasktorchSkeleton
  hs-source-dirs: src

executable example
  import: binary-base
  main-is: Main.hs
  hs-source-dirs: exe
